--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Ruslan Dautov
+email: 
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://dautovri.github.io" # the base hostname & protocol for your site
+twitter_username: 
+github_username:  dautovri
 
 # Build settings
 markdown: kramdown
 
 # Other options
 permalink: blog/:year/:month/:title
-job.title: "Assistant Professor"
+job.title: "Research assistant"
 excerpt_separator: "<!--more-->"
 
 # SEO stuff
