--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
 title: Ruslan Dautov
 email: 
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > 
+     China,Shenzhen University
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://dautovri.github.io" # the base hostname & protocol for your site
 twitter_username: 
