--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,10 @@
 title: Ruslan Dautov
 email: 
 description: > 
-     China,Shenzhen University
+     Office 614
+     Institute of Big Data Technology and Applications
+     College of Computer Science and Software Engineering
+     Shenzhen Unversity
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://dautovri.github.io" # the base hostname & protocol for your site
 twitter_username: 
