--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,19 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Peter Nencka
+email: nencka.2@osu.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+Economics and baseball (not nessisarally in order) 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: peternka
+github_username:  pnencka
 
 # Build settings
 markdown: kramdown
 
 # Other options
 permalink: blog/:year/:month/:title
-job.title: "Assistant Professor"
+job.title: "PhD Student"
 excerpt_separator: "<!--more-->"
 
 # SEO stuff
